--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,8 +12,8 @@
 
 <%= render 'contact_form', 
 			contact: @contact, 
-			text_fields: @text_fields, 
-			text_field_values: @text_field_values %>
+			text_fields: @text_fields,
+			text_areas: @text_areas %>
 
 
 
