--- a/app/views/text_fields/_form.html.erb
+++ b/app/views/text_fields/_form.html.erb
@@ -13,12 +13,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name, 'Text field name' %>
+    <%= f.label :name, 'Text field name', class: 'form-control' %>
     <%= f.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= f.submit "Create", class: 'btn btn-default' %>
   </div>
   
     <% end %>
