--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,31 +1,32 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-7 col-md-offset-2">
+  <h3> Sing up form </h3>
     <%= form_for(@user, url: signup_path) do |f| %>
 
-      <%= render 'shared/error_messages' %>   	
+      <%= render 'shared/error_messages' %>  	
 
     	<p>
     		<%= f.label :name %><br>
-      		<%= f.text_field :name %>
+      		<%= f.text_field :name, class: 'form-control'%>
     	</p>
       
         <p>
         	<%= f.label :email %><br>
-      		<%= f.email_field :email %>
+      		<%= f.email_field :email, class: 'form-control'%>
         </p>
       	
       	<p>
       		<%= f.label :password %><br>
-      		<%= f.password_field :password %>
+      		<%= f.password_field :password, class: 'form-control' %>
       	</p>
 
       	<p>
       		<%= f.label :password_confirmation, "Confirmation" %><br>
-      		<%= f.password_field :password_confirmation %>
+      		<%= f.password_field :password_confirmation, class: 'form-control'%>
       	</p>
 
         <p>
-        	<%= f.submit "Create my account", class: "btn btn-primary" %>
+        	<%= f.submit "Start creat my personalized form now", class: "btn btn-primary" %>
         </p>       
     <% end %>
   </div>
