--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,10 +10,7 @@
 
 
 <%= render 'contact_form', 
-			contact: @contact, 
-			text_fields: @text_fields,
-			text_areas: @text_areas,
-			dropdowns: @dropdowns %>
+			contact: @contact %>
 
 
 
