--- a/app/views/static_pages/contact_fields.html.erb
+++ b/app/views/static_pages/contact_fields.html.erb
@@ -76,7 +76,7 @@
             <td><%= dropdown.name %></td>
             <td>
               <ul>
-                <%= dropdown.get_options.each do |option| %>
+                <% dropdown.get_options.each do |option| %>
                   <li> <%= option %> </li>
                 <% end %>
               </ul>
