--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, 'About') %>
-<p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    <p>
+	<h3>
+		CustomFields is a Ruby on Rails application that allows you to create a contact list with your own cutom filds. 
+	</h3>
 </p>
+	
+<p>Custom fields uses <%= link_to 'Bootstrap', 'http://getbootstrap.com/', class: 'btn-link' %> </p>
+  </div>
+</div>
